Fix visibility issue

--- a/app/assets/scss/_home.scss
+++ b/app/assets/scss/_home.scss
@@ -23,6 +23,10 @@
     height: auto;
     padding: 10px;
     float: left;
+
+    &.hidden {
+        display: none;
+    }
 }
 
 .media-grid {
